CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(MarkDown)

SET(DEFAULT_BUILD_TYPE "Debug")
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
ENDIF()
SET(EXPECTED_BUILD_TYPES Debug Release RelWithDebInfo MinSizeRel)
IF("${CMAKE_BUILD_TYPE}" IN_LIST EXPECTED_BUILD_TYPES)
    MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
ELSE()
    MESSAGE(WARNING "Unexcpected build type: ${CMAKE_BUILD_TYPE}")
ENDIF()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 11)
ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -Werror)

INCLUDE_DIRECTORIES(.)

ADD_EXECUTABLE(md_tf TableFormat.cpp)
ADD_EXECUTABLE(md_tt TableFormat.cpp)
TARGET_COMPILE_DEFINITIONS(md_tt PUBLIC MD_TRANSPOSE)

CONFIGURE_FILE(templates/install.sh.in install.sh @ONLY)
SET(BIN_FILE "md_tf")
CONFIGURE_FILE(templates/test.sh.in test_tf.sh @ONLY)
SET(BIN_FILE "md_tt")
CONFIGURE_FILE(templates/test.sh.in test_tt.sh @ONLY)
UNSET(TEST_BIN)

ENABLE_TESTING()
ADD_TEST(NAME "md_tf test" COMMAND "test_tf.sh")
ADD_TEST(NAME "md_tt test" COMMAND "test_tt.sh")
